5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4014/executions/1756_674.log
== TEST (2019-05-27 15:34:55) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
var1= array(eval(input("vetor: ")))
print(size(var1))
print(var1([0]))
print(var1([-1]))
print(max(var1))
print(min(var1))
print(sum(var1))
print(round(sum(var1)/size(var1))
-- ERROR:
File "XXXX", line 12
    
                                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:35:40) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
var1= array(eval(input("vetor: ")))
print(size(var1))
print(var1([0]))
print(var1([-1]))
print(max(var1))
print(min(var1))
print(sum(var1))
print(round(sum(var1)/size(var1), 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 15:35:54) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
var1= array(eval(input("vetor: ")))
print(size(var1))
print(var1([0]))
print(var1([-1]))
print(max(var1))
print(min(var1))
print(sum(var1))
print(round(sum(var1)/size(var1), 2))
-- EXECUTION TIME:
0.37654
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/674/main.py", line 6, in <module>
    print(var1([0]))
TypeError: 'numpy.ndarray' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 15:35:56) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
var1= array(eval(input("vetor: ")))
print(size(var1))
print(var1([0]))
print(var1([-1]))
print(max(var1))
print(min(var1))
print(sum(var1))
print(round(sum(var1)/size(var1), 2))
-- EXECUTION TIME:
0.448121
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/674/main.py", line 6, in <module>
    print(var1([0]))
TypeError: 'numpy.ndarray' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 15:35:57) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
var1= array(eval(input("vetor: ")))
print(size(var1))
print(var1([0]))
print(var1([-1]))
print(max(var1))
print(min(var1))
print(sum(var1))
print(round(sum(var1)/size(var1), 2))
-- EXECUTION TIME:
0.43344
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/674/main.py", line 6, in <module>
    print(var1([0]))
TypeError: 'numpy.ndarray' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 15:35:57) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
var1= array(eval(input("vetor: ")))
print(size(var1))
print(var1([0]))
print(var1([-1]))
print(max(var1))
print(min(var1))
print(sum(var1))
print(round(sum(var1)/size(var1), 2))
-- EXECUTION TIME:
0.698171
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/674/main.py", line 6, in <module>
    print(var1([0]))
TypeError: 'numpy.ndarray' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 15:35:58) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
var1= array(eval(input("vetor: ")))
print(size(var1))
print(var1([0]))
print(var1([-1]))
print(max(var1))
print(min(var1))
print(sum(var1))
print(round(sum(var1)/size(var1), 2))
-- EXECUTION TIME:
0.890828
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/674/main.py", line 6, in <module>
    print(var1([0]))
TypeError: 'numpy.ndarray' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 15:35:58) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
var1= array(eval(input("vetor: ")))
print(size(var1))
print(var1([0]))
print(var1([-1]))
print(max(var1))
print(min(var1))
print(sum(var1))
print(round(sum(var1)/size(var1), 2))
-- EXECUTION TIME:
0.90459
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/674/main.py", line 6, in <module>
    print(var1([0]))
TypeError: 'numpy.ndarray' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:37:06) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
var1= array(eval(input("vetor: ")))
print(size(var1))
print(var1([0]))
print(var1([-1]))
print(max(var1))
print(min(var1))
print(sum(var1))
print(round(sum(var1)/size(var1), 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:37:39) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
var1= array(eval(input("vetor: ")))
print(size(var1))
print(var1[0])
print(var1[-1])
print(max(var1))
print(min(var1))
print(sum(var1))
print(round(sum(var1)/size(var1), 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:39:25) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
var1= array(eval(input("vetor: ")))
print(size(var1))
print(var1[0])
print(var1[-1])
print(max(var1))
print(min(var1))
print(sum(var1))
print(round(sum(var1)/size(var1), 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 15:39:34) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
var1= array(eval(input("vetor: ")))
print(size(var1))
print(var1[0])
print(var1[-1])
print(max(var1))
print(min(var1))
print(sum(var1))
print(round(sum(var1)/size(var1), 2))
-- EXECUTION TIME:
0.326868
-- TEST CASE 1:
---- input:
[13,10,1,9,7,20,5,20,14,16,5,13,11,7,6,2,19,18,8,19,13,5,8,4,3,16,8,7,9,2,13,11,14,10,15,11,6,17,16,10,15,6,12,9,4,15,16,10,15,7,17,10,9,6,12,18,2,9,5,17,19,5,20,4,5,11,3,15,15,3,20,11,5,13,9,16,14,15,11,19,15,9,14,10,7,1,6,7]
---- correct output:
88
13
7
20
1
937
10.65
---- user output:
88
13
7
20
1
937
10.65
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
